--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.8
 
+  *) SECURITY: CVE-2009-2412 (cve.mitre.org)
+     Fix overflow in pools and rmm, where size alignment was taking place.
+     [Matt Lewis <mattlewis@google.com>, Sander Striker]
+
   *) Pass default environment to testflock, testoc and testpipe children,
      so that tests run when APR is compiled with Intel C Compiler.
      [Bojan Smojver]
