add entry for  CVE-2011-0419/apr_fnmatch() issue
see r1128717 for the matching code


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@1169990 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.20
 
+  *) Security: CVE-2011-0419
+     Reimplement apr_fnmatch() from scratch using a non-recursive
+     algorithm; now has improved compliance with the fnmatch() spec.
+     [William Rowe]
+
   *) Updated config.guess and config.sub.  [Rainer Jung]
 
   *) Fix flag character '#' in combination with format character 'x' in
